fixed weird spacing

--- a/Lecture 2/style.css
+++ b/Lecture 2/style.css
@@ -3,8 +3,9 @@ html, body{
     padding: 0;
     font-size: 18px;
 }
+
 button{
-    width: 22%;
+    width: 23%;
     height: 90%;
     border-radius: 15px;
     border-style: none solid solid none;
@@ -13,6 +14,7 @@ button{
     font-size: 1.5rem;
     margin: 5px;
 }
+
 .container{
     width: 500px;
     height: 150px;
@@ -20,18 +22,19 @@ button{
     margin: 0 auto;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    
 }
+
 .light-display{
-    width: 60%;
+    width: 65%;
     height: 87%;
     border: 2px solid #A19F9D;
     border-radius: 15px;
     margin: 5px;
 }
+
 .light{
     width: 50px;
     height: 50px;
